fix(dropdown): fix dropdown overlap and zindex config

--- a/src/app/(public)/PublicNavbar/PublicNavbar.module.css
+++ b/src/app/(public)/PublicNavbar/PublicNavbar.module.css
@@ -3,7 +3,7 @@
 
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: var(--z-navbar);
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
